# burgonet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  flash.html  index.html  package-lock.json  package.json  pytest.ini  vite.config.ts
.github/workflows/: release-build.yml  release-preflight.yml  release-publish.yml  release.yml
src/: App.svelte  FlashOverlay.svelte  app.css  flash.ts
src-sidecar/: __init__.py  alert.py  camera.py  config.py  conflict.py  main.py  requirements.txt
src-sidecar/detection/: __init__.py  face.py  hands.py  proximity.py  zone.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  sidecar.rs  tray.rs
src/lib/: ConfidenceSlider.svelte  DelaySelector.svelte  FpsSelector.svelte  Settings.svelte  SoundSelector.svelte  backend.ts  config.ts  stores.ts
tests/: conftest.py  test_alert.py  test_config.py  test_protocol.py  test_proximity.py  test_zone.py
