[package]
name = "burgonet"
version = "0.1.0"
description = "Burgonet desktop shell"
authors = ["Codex"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "burgonet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1"
dirs = "6"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
rfd = "0.15"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "linux")'.dependencies]
gdk = "0.18.2"
gtk = "0.18.2"
